--- a/api/qsharp/microsoft.quantum.canon.applytofirsttwoqubitsca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirsttwoqubitsca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将操作应用于寄存器中的前两个 qubits。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 remarks: >-
   这等效于：
 
@@ -52,9 +52,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirsttwoqubits
 metadata:
-  ms.openlocfilehash: 2be73c142e21e24cae00db9d045f3fa3e6b504f8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: fc1291d7fda28978ae73746310f0adf3d4935efb
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213103"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674655"
