--- a/api/qsharp/microsoft.quantum.logical.conditioned.yml
+++ b/api/qsharp/microsoft.quantum.logical.conditioned.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Logical
 summary: 根据布尔条件的值返回两个值中的一个值。
 remarks: >-
-  与 `?|` 运算符不同，此函数不会短路，因此这两个输入都是完全计算的。
+  与`?|`运算符不同，此函数不会进行短路，因此，这两个输入都是完全计算的。
 
 
   最多短路行为，如下所示：
@@ -27,23 +27,23 @@ input:
     isPrimitive: true
     uid: Bool
   - name: ifTrue
-    summary: '`true``condition` 时要返回的值。'
+    summary: 当为`condition` `true`时要返回的值。
     uid: "'T"
     isLocal: true
   - name: ifFalse
-    summary: '`false``condition` 时要返回的值。'
+    summary: 当为`condition` `false`时要返回的值。
     uid: "'T"
     isLocal: true
 output:
   content: "'T"
   types:
-  - summary: '`ifTrue` 如果 `condition` `true``ifFalse`，则为; 否则为。'
+  - summary: '`ifTrue`如果`condition`为`true`，则`ifFalse`为; 否则为。'
     uid: "'T"
     isLocal: true
 metadata:
-  ms.openlocfilehash: f26e540b181ce405125dbf80cd97c3e177ad9531
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c5a255fe0434c7dfc9bf49f1a1c9c6be03cd8055
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233333"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674080"
