--- a/api/qsharp/microsoft.quantum.canon.applyifelseba.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelseba.yml
@@ -7,17 +7,17 @@ summary: >-
   应用两个 adjointable 操作之一，具体取决于传统位的值。
 
 
-  给定一个位 `bit`，当 `bit` 为 `true`时，应用 `trueInput` 作为其输入的操作 `trueOp`，并在 `falseOp(falseInput)` `bit` 时应用 `false`。
+  给定一个位`bit`，在为时`trueOp`应用`trueInput`该操作，并`bit`在`true`为时应用`falseOp(falseInput)` `bit`该操作`false`。
 syntax: "operation ApplyIfElseBA (bit : Bool, (trueOp : ('T => Unit is Adj), trueInput : 'T), (falseOp : ('U => Unit is Adj), falseInput : 'U)) : Unit"
 input:
   content: "(bit : Bool, (trueOp : ('T => Unit is Adj), trueInput : 'T), (falseOp : ('U => Unit is Adj), falseInput : 'U))"
   types:
   - name: bit
-    summary: 用于确定是否应用 `trueOp` 或 `falseOp` 的布尔值。
+    summary: 用于确定是否`trueOp`应用或`falseOp`的布尔值。
     isPrimitive: true
     uid: Bool
   - name: trueOp
-    summary: '`true``bit` 时要应用的 adjointable 操作。'
+    summary: 当为`bit` `true`时要应用的 adjointable 操作。
     isOperation: true
     input:
       types:
@@ -30,11 +30,11 @@ input:
     functors:
     - Adjoint
   - name: trueInput
-    summary: 当 `bit` `true`时，提供给 `trueOp` 的输入。
+    summary: 当为`trueOp` `bit` `true`时要向其提供的输入。
     uid: "'T"
     isLocal: true
   - name: falseOp
-    summary: '`false``bit` 时要应用的 adjointable 操作。'
+    summary: 当为`bit` `false`时要应用的 adjointable 操作。
     isOperation: true
     input:
       types:
@@ -47,7 +47,7 @@ input:
     functors:
     - Adjoint
   - name: falseInput
-    summary: 当 `bit` `false`时，提供给 `falseOp` 的输入。
+    summary: 当为`falseOp` `bit` `false`时要向其提供的输入。
     uid: "'U"
     isLocal: true
 output:
@@ -57,9 +57,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用 `trueOp` 操作的输入类型。
+  summary: 要有条件地应用的`trueOp`操作的输入类型。
 - uid: "'U"
-  summary: 要有条件地应用 `falseOp` 操作的输入类型。
+  summary: 要有条件地应用的`falseOp`操作的输入类型。
 functors:
 - Adjoint
 seeAlso:
@@ -69,9 +69,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: 05f4aa82997cc4fc444c0e2e5d27d53ac86d94e9
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 6e84acfbad8d1811ee0ab41de1f51fbcab4c286c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871339"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675013"
