--- a/api/qsharp/microsoft.quantum.canon.applytoeachindexca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoeachindexca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将单 qubit 操作应用于寄存器中的每个索引元素。
 
-  修饰符 `CA` 指示 qubit 操作 adjointable 且可控。
+  修饰符`CA`指示 qubit 操作是 adjointable 和可控制的。
 syntax: "operation ApplyToEachIndexCA (singleElementOperation : ((Int, 'T) => Unit is Adj + Ctl), register : 'T[]) : Unit"
 input:
   content: "(singleElementOperation : ((Int, 'T) => Unit is Adj + Ctl), register : 'T[])"
@@ -46,9 +46,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytoeachindex
 metadata:
-  ms.openlocfilehash: ea42188d5dd9de274617cfc64c3448e1e3447037
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 75372ebc47be61ad273456ac1f0413667df12938
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213528"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674815"
