--- a/api/qsharp/microsoft.quantum.canon.applytoelement.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoelement.yml
@@ -7,7 +7,7 @@ summary: >-
   将操作应用到数组的给定元素。
 
 
-  给定一个操作 `op`，索引 `index`和 `targets`目标的数组，将应用 `op(targets[index])`。
+  给定一个操作`op`、一个索引`index`和一个目标`targets`数组，适用于`op(targets[index])`。
 syntax: "operation ApplyToElement (op : ('T => Unit), index : Int, targets : 'T[]) : Unit"
 input:
   content: "(op : ('T => Unit), index : Int, targets : 'T[])"
@@ -44,9 +44,9 @@ seeAlso:
 - microsoft.quantum.canon.applytoelementa
 - microsoft.quantum.canon.applytoelementca
 metadata:
-  ms.openlocfilehash: 1a59c045e3ee5b2858a8be27e6e3775a5ca4afcd
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 29200446a02cdd59b02a2291bc30fc568b46f787
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908066"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674788"
