--- a/api/qsharp/microsoft.quantum.canon.applytopartitionca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytopartitionca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将一对操作应用于寄存器的给定分区分为两部分。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToPartitionCA (op : ((Qubit[], Qubit[]) => Unit is Ctl + Adj), numberOfQubitsToFirstArgument : Int, target : Qubit[]) : Unit'
 input:
   content: '(op : ((Qubit[], Qubit[]) => Unit is Ctl + Adj), numberOfQubitsToFirstArgument : Int, target : Qubit[])'
@@ -52,9 +52,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytopartition
 metadata:
-  ms.openlocfilehash: 8eced8b43f98878de9c66135ba022cad8702c56e
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 940269f33bbeeddb52d19103f42ec8ebf6508757
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213001"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674580"
