--- a/api/qsharp/microsoft.quantum.intrinsic.message.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.message.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.intrinsic.message
 name: Message
 type: function
 namespace: Microsoft.Quantum.Intrinsic
-summary: 记录消息。
+summary: 在日志中记录消息。
 remarks: 此函数的特定行为与模拟器相关，但在大多数情况下，会将给定消息写入控制台。
 syntax: 'function Message (msg : String) : Unit'
 input:
@@ -19,9 +19,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 90ca6c1a059a327da86e81de70f1f6bfc34f8785
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b089c79752d13d9b35c4d212a5ffeeed49d100e5
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234047"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674146"
