--- a/api/qsharp/microsoft.quantum.logical.and.yml
+++ b/api/qsharp/microsoft.quantum.logical.and.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Logical
 summary: 返回两个值的布尔值。
 remarks: >-
-  与 `and` 运算符不同，此函数不会短路，因此这两个输入都是完全计算的。
+  与`and`运算符不同，此函数不会进行短路，因此，这两个输入都是完全计算的。
 
 
   最多短路行为，如下所示：
@@ -33,13 +33,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 和 `b` 都 `true`时，`true`。
+  - summary: '`true`当且仅当`a`和`b`都是`true`时。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 22e884f8041ecd66aba875c38f0b8af234aee0e5
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 01c26ef3804d484d2cfbd6f54261ad80b8f66594
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233367"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674092"
