--- a/api/qsharp/microsoft.quantum.logical.notequall.yml
+++ b/api/qsharp/microsoft.quantum.logical.notequall.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 不等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`不等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 77dcfbe1fd4a94166dd61dbfa81b2fd33240c40a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f5e2cb54c330a9caa92a96196391ee0a7f00d408
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235237"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674046"
