--- a/api/qsharp/microsoft.quantum.canon.bounda.yml
+++ b/api/qsharp/microsoft.quantum.canon.bounda.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   给定针对单个输入的操作数组时，将生成一个按顺序执行每个给定操作的新操作。
 
-  修饰符 `A` 指示数组中的所有操作都是 adjointable 的。
+  修饰符`A`指示数组中的所有操作都是 adjointable。
 examples: >-
   以下项是等效的：
 
@@ -67,9 +67,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.bound
 metadata:
-  ms.openlocfilehash: a4707b75fdedf6612343690f0b42368fe0979ead
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a965cd80372dbec05810739ed3774b886dc0aa53
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220617"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82676005"
