--- a/api/qsharp/microsoft.quantum.canon.boundca.yml
+++ b/api/qsharp/microsoft.quantum.canon.boundca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   给定针对单个输入的操作数组时，将生成一个按顺序执行每个给定操作的新操作。
 
-  修饰符 `CA` 指示数组中的所有操作都是 adjointable 的，并且可控。
+  修饰符`CA`指示数组中的所有操作都是 adjointable 且可控制的。
 examples: >-
   以下项是等效的：
 
@@ -69,9 +69,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.bound
 metadata:
-  ms.openlocfilehash: 42e32f28e7c91ade9ff00196f7d9fac29c5c48e4
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 0144486e675bfb18d4e171a4a8cfec7e5a8be2ae
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225411"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675958"
