--- a/api/qsharp/microsoft.quantum.canon.ccontrolled.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccontrolled.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.canon.ccontrolled
 name: CControlled
 type: function
 namespace: Microsoft.Quantum.Canon
-summary: 给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果 `false`，则不会执行任何操作。
+summary: 给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果`false`为，则不执行任何操作。
 syntax: "function CControlled (op : ('T => Unit)) : ((Bool, 'T) => Unit)"
 input:
   content: "(op : ('T => Unit))"
@@ -42,9 +42,9 @@ seeAlso:
 - microsoft.quantum.canon.ccontrolleda
 - microsoft.quantum.canon.ccontrolledca
 metadata:
-  ms.openlocfilehash: 340a993f5949d3faa6e4ebf883ee0f15c219a49b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ed9e5a80bdb0678b21165ecc710f56cccdbbe76d
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73211981"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675915"
