--- a/api/qsharp/microsoft.quantum.canon.ccontrolledc.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccontrolledc.yml
@@ -4,9 +4,9 @@ name: CControlledC
 type: function
 namespace: Microsoft.Quantum.Canon
 summary: >-
-  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果 `false`，则不会执行任何操作。
+  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果`false`为，则不执行任何操作。
 
-  修饰符 `C` 指示操作可控制。
+  修饰符`C`指示操作可控制。
 syntax: "function CControlledC (op : ('T => Unit is Ctl)) : ((Bool, 'T) => Unit is Ctl)"
 input:
   content: "(op : ('T => Unit is Ctl))"
@@ -47,9 +47,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.ccontrolled
 metadata:
-  ms.openlocfilehash: 73a953fd2f2380f808fd612e46084c443e6c87ee
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a136257958cff7a759cdd34f266db1909b646f23
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73211777"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675885"
