--- a/api/qsharp/microsoft.quantum.canon.ccontrolledca.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccontrolledca.yml
@@ -4,9 +4,9 @@ name: CControlledCA
 type: function
 namespace: Microsoft.Quantum.Canon
 summary: >-
-  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果 `false`，则不会执行任何操作。
+  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果`false`为，则不执行任何操作。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 syntax: "function CControlledCA (op : ('T => Unit is Ctl + Adj)) : ((Bool, 'T) => Unit is Ctl + Adj)"
 input:
   content: "(op : ('T => Unit is Ctl + Adj))"
@@ -49,9 +49,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.ccontrolled
 metadata:
-  ms.openlocfilehash: 918146c6f167050490d3a9047cf75dc66236b004
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a0a30761119d661d759f585d4ce4f6a4e7b30f94
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73068064"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675868"
