--- a/api/qsharp/microsoft.quantum.canon.delayca.yml
+++ b/api/qsharp/microsoft.quantum.canon.delayca.yml
@@ -9,9 +9,9 @@ summary: >-
 
   给定一个操作和一个对该操作的输入时，只要提供附加输入，就会应用该操作。
 
-  具体而言，表达式 `Delay(op, arg, _)` 是在调用时将 `op` 应用于 `arg` 的操作。
+  具体而言，表达式`Delay(op, arg, _)`是`op` `arg`在调用时应用于的操作。
 
-  Expression `Delay(op,arg,_)` 允许延迟 `op`的应用程序。
+  表达式`Delay(op,arg,_)`允许延迟的应用程序`op`。
 syntax: "operation DelayCA (op : ('T => Unit is Ctl + Adj), arg : 'T, aux : Unit) : Unit"
 input:
   content: "(op : ('T => Unit is Ctl + Adj), arg : 'T, aux : Unit)"
@@ -53,9 +53,9 @@ seeAlso:
 - microsoft.quantum.canon.delay
 - microsoft.quantum.canon.delayed
 metadata:
-  ms.openlocfilehash: ec419d56854c8398502a29e2d178da5608c1c592
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 71dae781438d07344b3c11da14e8eb323cd2073c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73219648"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82675679"
